--- a/config/config.json
+++ b/config/config.json
@@ -18,6 +18,6 @@
     "password": "uaYPfOhPSmxqmCoYSWTPBhhKSDbD6CMK",
     "database": "postsdb_wfuj",
     "host": "dpg-cp89fhe74orc73dei4fg-a",
-    "dialect": "postgre"
+    "dialect": "postgres"
   }
 }
